[package]
name = "c2"
version = "0.0.1"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.dev.package.askama_derive]
opt-level = 3

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.2", features = ["macros", "ws"] }
axum-extra = { version = "0.9.0", features = ["typed-header", "cookie"] }
axum-htmx = "0.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "tls-rustls", "macros", "migrate", "time"] }
oauth2 = "4.4.2"
uuid = { version = "1.6.1", features = ["v4"] }
reqwest = "0.11.22"
dotenvy = "0.15.7"
constant_time_eq = "0.3.0"
time = { version = "0.3.30", features = ["formatting"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
http-body = "1.0.0"

#static files
rust-embed = "8.1.0"
mime_guess = "2.0.4"

#markdown support, maybe useful for docs and articles
pulldown-cmark = { version = "0.9.3", default-features = false, features = ["simd"] }
ammonia = "3.3.0"

futures-util = "0.3.29"
futures = "0.3.29"
http = "1.0.0"
home = "0.5.5"
cookie = { version = "0.18.0", features = [] }



