[package]
name = "c2"
version = "0.0.1"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.dev.package.askama_derive]
opt-level = 3

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
askama = { git = "https://github.com/djc/askama.git", rev = "50c64bc", features = ["with-axum", "markdown"] }
askama_axum = { git = "https://github.com/djc/askama.git", rev = "50c64bc" }
axum = { version = "0.7.4", features = ["macros", "ws"] }
axum-extra = { version = "0.9.2", features = ["typed-header", "cookie"] }
axum-htmx = "0.5.0"
chrono = { version = "0.4.34", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = "3.6.1"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "tls-rustls", "macros", "migrate", "time"] }

http-body-util = "0.1"
hyper = { version = "1.2.0", features = ["full"] }

#auth
oauth2 = "4.4.2"
uuid = { version = "1.7.0", features = ["v4"] }
reqwest = "0.11.24"
constant_time_eq = "0.3.0"

dotenvy = "0.15.7"
time = { version = "0.3.34", features = ["formatting"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
http-body = "1.0.0"

validator = { version = "0.17.0", features = ["derive"] }


#static files
rust-embed = "8.3.0"
mime_guess = "2.0.4"

futures-util = "0.3.30"
futures = "0.3.30"
http = "1.1.0"
home = "0.5.9"
thiserror = "1.0.57"
anyhow = "1.0.80"

random_word = { version = "0.4.3", features = ["en"] }