[package]
name = "c2"
version = "0.0.1"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.dev.package.askama_derive]
opt-level = 3

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
askama = { git = "https://github.com/djc/askama.git", rev = "353304c", features = ["with-axum", "markdown"] }
askama_axum = { git = "https://github.com/djc/askama.git", rev = "353304c" }
axum = { version = "0.7.5", features = ["macros", "ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header", "cookie"] }
axum-htmx = "0.5.0"
chrono = { version = "0.4.35", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = "3.7.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-rustls", "macros", "migrate", "time"] }

http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["full"] }

#auth
oauth2 = { version = "5.0.0-alpha.3", features = ["reqwest-blocking"] }
uuid = { version = "1.8.0", features = ["v4"] }
reqwest = { version = "0.12.2" }
constant_time_eq = "0.3.0"

dotenvy = "0.15.7"
time = { version = "0.3.34", features = ["formatting"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
http-body = "1.0.0"

validator = { version = "0.17.0", features = ["derive"] }


#static files
rust-embed = "8.3.0"
mime_guess = "2.0.4"

futures-util = "0.3.30"
futures = "0.3.30"
http = "1.1.0"
home = "0.5.9"
thiserror = "1.0.58"
anyhow = "1.0.81"

random_word = { version = "0.4.3", features = ["en"] }
url = "2.5.0"